<resources>
    //Application
    <string name="app_name">Technical Assistant</string>
    <string name="hint"><u>Hint</u></string>
    <string name="symbols_entered">Symbols entered: </string>
    <string name="enter_function">Enter your function:</string>
    <string name="input_bool_function_hint">Only 1 and 0</string>
    <string name="dnf">DNF</string>
    <string name="cnf">CNF</string>
    <string name="result">Result:</string>

    //MainActivity and NavigationDrawerFragment
    <string-array name="section_titles">
        <item>Main</item>
        <item>Minimize</item>
        <item>DNF and CNF</item>
        <item>Build graph</item>
        <item>Solve equation</item>
    </string-array>
    <string-array translatable="false" name="sections_icons">
        <item>@drawable/ic_main</item>
        <item>@drawable/ic_minimize</item>
        <item>@drawable/ic_forms</item>
        <item>@drawable/ic_graph</item>
        <item>@drawable/ic_equatin</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_ukrainian">Ukrainian</string>
    <string name="action_english">English</string>

    //MinimizeFragment
    <string name="minimization_solution"><u>Solution</u></string>
    <string name="mdnf">MDNF</string>
    <string name="mknf">MKNF</string>
    //Solution
    <string name="minimization_entered_function">Entered function: </string>
    <string name="minimization_truth_table">Truth table:\n</string>
    <string name="minimization">\n<b>Minimization:\n</b></string>
    <string name="minimization_terms"><b>Terms:\n</b></string>
    <string name="minimization_glue"> glue:\n</string>
    <string name="quaine_matrix">\n<b>Implicant chart:\n</b></string>
    <string name="inverse_function">Lets find DNF of inverse function:</string>
    <string name="need_to_inverse">To get result we need to inverse each variable!</string>

    //NormalFormsFragment
    <string name="button_normal_forms">Start</string>
    <string name="normal_forms_truth_table">Truth table:</string>

    //GraphFragment
    <string name="input_function">Enter function</string>
    <string name="y" translatable="false">y = </string>
    <string name="draw">Draw</string>
    <string name="enter_limits">Enter limits:</string>
    <string name="graph_limit1" translatable="false">-10</string>
    <string name="graph_limit2" translatable="false">10</string>
    <string name="invalid_function">Invalid function!</string>

    //EquationFragment
    <string name="enter_equation">Enter your equation:</string>
    <string name="input_equation">Enter equation</string>
    <string name="solve">Solve</string>
    <string name="invalid_equation">Invalid equation!</string>
    <string translatable="false" name="equation_epsilon">0.001</string>
    <string name="equation_limit1" translatable="false">-10</string>
    <string name="equation_limit2" translatable="false">10</string>
    <string name="enter_accuracy">Enter accuracy:</string>
</resources>
