<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:weightSum="1"
              android:background="@color/application_background_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hint"
            android:id="@+id/textView_graph_hint"
            android:maxLines="1"
            android:enabled="true"
            android:clickable="true"
            style="@style/textView_spoiler"
            android:linksClickable="false"
            android:longClickable="false"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/application_background_color">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/graph_hint_text"
            android:id="@+id/textView_graph_hint_text"
            android:maxLines="0"
            style="@style/textView_spoiler_text"
            android:autoLink="none"/>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_function"
        android:id="@+id/textView_graph_input"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/application_background_color"
        android:weightSum="12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/y"
            android:width="0dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:id="@+id/textView2"
            android:layout_weight="3"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_graph"
            android:hint="@string/input_function"
            style="@style/editText_input"
            android:layout_margin="2dp"
            android:layout_weight="7"
            android:width="0dp"
            android:layout_gravity="center_horizontal"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_weight="2"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_limits"
        android:id="@+id/textView_graph_limits"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/application_background_color"
        android:weightSum="10">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText_graph_limit1"
            android:hint="@string/graph_limit1"
            style="@style/editText_input"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:width="0dp"
            android:layout_gravity="center_horizontal"
            android:maxLength="3"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/editText_graph_limit2"
            android:hint="@string/graph_limit2"
            style="@style/editText_input"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:width="0dp"
            android:layout_gravity="center_horizontal"
            android:maxLength="3"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw"
        android:id="@+id/button_graph"
        style="@style/button"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <com.jjoe64.graphview.GraphView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/graph"/>

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_gravity="bottom"/>

</LinearLayout>