<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/application_background_color">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical" android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_input_bool_function"
            android:hint="@string/input_bool_function_hint"
            android:layout_below="@+id/textView_minimize_input"
            android:layout_centerHorizontal="true"
            style="@style/editText_input"
            android:layout_margin="2dp"
            android:digits="01"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mdnf"
            android:id="@+id/button_mdnf"
            android:enabled="false"
            style="@style/button"
            android:layout_below="@+id/textView_minimize_input_count"
            android:layout_toRightOf="@+id/textView_minimization_solution"
            android:layout_toEndOf="@+id/textView_minimization_solution"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hint"
            android:id="@+id/textView_minimize_hint"
            android:maxLines="1"
            android:enabled="true"
            android:clickable="true"
            style="@style/textView_spoiler"
            android:linksClickable="false"
            android:longClickable="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/minimize_hint_text"
            android:id="@+id/textView_minimize_hint_text"
            android:layout_below="@+id/textView_minimize_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:maxLines="0"
            style="@style/textView_spoiler_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enter_function"
            android:id="@+id/textView_minimize_input"
            android:layout_below="@+id/textView_minimize_hint_text"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_minimize_input_count"
            android:layout_below="@+id/editText_input_bool_function"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_minimization_result"
            android:clickable="false"
            android:editable="false"
            android:enabled="true"
            android:minLines="1"
            android:nestedScrollingEnabled="false"
            android:scrollHorizontally="true"
            android:saveEnabled="false"
            android:singleLine="false"
            android:selectAllOnFocus="false"
            android:inputType="none"
            android:visibility="invisible"
            android:layout_below="@+id/space3"
            android:layout_alignLeft="@+id/space2"
            android:layout_alignRight="@+id/space"
            android:autoText="false"
            style="@style/editText_output"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minimization_solution"
            android:id="@+id/textView_minimization_solution"
            android:maxLines="1"
            android:enabled="true"
            android:clickable="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/editText_minimization_result"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            style="@style/textView_spoiler"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalScrollView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_minimization_solution"
            android:background="@color/application_background_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/minimize_hint_text"
                android:id="@+id/textView_minimization_solution_text"
                android:maxLines="0"
                style="@style/textView_spoiler_text"/>
        </HorizontalScrollView>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/space2"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_below="@+id/button_mdnf"
            android:layout_centerHorizontal="true"
            android:id="@+id/space3"/>

        <Button
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mknf"
            android:id="@+id/button_mknf"
            android:enabled="false"
            android:layout_above="@+id/space3"
            android:layout_toRightOf="@+id/textView_minimize_input"
            android:layout_toEndOf="@+id/textView_minimize_input"/>

        <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:id="@+id/space"/>

    </RelativeLayout>
</ScrollView>